# TemperatureControl

./: .gitignore  LICENSE  README.md  dummy.py  ft232h.py  gui.py  heater_control.py  main.py  mainView.py  ni.py  paint.py  pyproject.toml  readsettings.py  requirements.txt  settings.yml  timeKeeper.py  timekeeper.py  worker.py
archive/: gui.py  main.py  signal_out.py  signal_output.py  test.ipynb  test.py
components/buttons/: toggles.py
components/docks/: analog_temperature.py  control.py  pid_tuning.py  plots.py  settings.py  tempcontrol.py
components/widgets/: analoggauge.py  graph.py
examples/: pid_boiler_example.ipynb  test.ipynb
src/temperature_control/: __init__.py  main.py  mainView.py  readsettings.py  settings.yml
src/temperature_control/components/docks/: analog_temperature.py  control.py  log.py  pid_tuning.py  plots.py  tempcontrol.py
src/temperature_control/components/widgets/: graph.py
src/temperature_control/sensors/: device.py  ft232h.py  max6675.py  ni9211.py  ni_controller.py
