[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "temperature_control"
version = "0.0.2"
description = "Graphical tool for PID control of a membrane"
readme = "README.md"
requires-python = ">=3.8"
license = { file="LICENSE" }
authors = [
  { name="Kuzmin Arseniy Aleksandrovich", email="arseniy.a.kuzmin@gmail.com" },
]
keywords = ["heater", "PID control", "control","GUI", "UI"]
dependencies = [
    "pyqt5 >= 5.15.7",
    "QLed>=1.3.1",
    "pyqtgraph >= 0.13.4",
    "PyYAML >=6.0.2",
    "simple_pid >= 2.0.1",
    "board>=1.0",
    "nidaqmx >=1.0.0",
    "numpy >= 2.1.0",
    "pandas >= 2.2.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["black", "jupyter", "PyQt5-stubs", "pigpio"]

[project.urls]
"Homepage" = "https://github.com/queezz/TemperatureControl"
"Bug Tracker" = "https://github.com/queezz/TemperatureControl/issues"
